--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="bloc-haut">
   <app-block-component class="top-left"></app-block-component>
   <app-block-component class="top-right"></app-block-component>
@@ -6,3 +7,7 @@
   <app-block-component class="bottom-right"></app-block-component>
   <app-block-component class="bottom-left"></app-block-component>
 </div>
+-->
+
+
+app-block-users
