--- a/src/app/block-users/block-users.component.html
+++ b/src/app/block-users/block-users.component.html
@@ -1,1 +1,12 @@
 <img alt="" [src]="User.photo">
+<h2>Nom : {{User.name}}</h2>
+<h2>Prénom : {{User.firstName}}</h2>
+<h2 *ngIf="displayAge">Age : {{User.age}}</h2>
+<h2>{{User.quote}}</h2>
+
+<input id="name" [(ngModel)]="User.quote" placeholder="Citation">
+<br>
+<br>
+<br>
+<button (click)="toggle()">{{btnAge}}</button>
+
