--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,18 @@
   <app-block-component class="bottom-left"></app-block-component>
 </div>
 -->
+<ul>
+  <li>
+    <a [routerLink]="['/Menu']">Menu</a>
+  </li>
+  <li>
+    <a [routerLink]="['/SignUp']">SignUp</a>
+  </li>
+  <li>
+    <a [routerLink]="['/User-Profil']">User-Profil</a>
+  </li>
+</ul>
+
+<router-outlet></router-outlet>
 
 
-<app-block-users></app-block-users>
